--- a/template.pug
+++ b/template.pug
@@ -6,7 +6,7 @@ html(lang="en")
         meta(http-equiv="cache-control" content="no-cache")
         title #{cityName}人民网 --#{cityName}人民的网站
 body
-  h1 #{title}+'-wenmu'
+  h1 #{title}-wenmu
   div 
     a(href="https://www.baidu.com")
     p.
